# Polygonal-mesh-simplification-and-LOD

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
assets/: bunny.gltf  happy.gltf  horseToy.gltf  horseToyFixed.gltf  lowe.gltf  loweFixed.gltf  pengu.gltf  plane.gltf  scene.gltf  spheres.gltf  wings.gltf
assets/bonsai/: bonsai.gltf
assets/boot/: boot.gltf
assets/horseToy/: horseToy.gltf
assets/maleBody/: maleBodyFixed.gltf  maleBodyOrig.gltf
assets/sphere/: sphere.gltf
assets/wineGlass/: wineGlass.gltf
plot/: output.txt  plotLOD.py  plotLODDynamic.py  plotLODStatic.py  run.bat  runPlotSpiral.bat
src/: main.cpp  window.cpp  window.h
src/apps/demo/: Benchmark.cpp  Benchmark.hpp  CMakeLists.txt  SpiralApp.cpp  SpiralApp.hpp  SpiralRenderer.cpp  SpiralRenderer.hpp  SpiralScene.cpp  SpiralScene.hpp  main.cpp
src/apps/demo/shaders/: shader.comp  shader.frag  shader.vert
src/apps/simplificator/: CMakeLists.txt  SimplificatorApp.cpp  SimplificatorApp.hpp  SimplificatorRenderer.cpp  SimplificatorRenderer.hpp  main.cpp
src/apps/simplificator/shaders/: shader.frag  shader.vert
src/apps/spiral/: Benchmark.cpp  CMakeLists.txt  SpiralApp.cpp  SpiralRenderer.cpp  SpiralRenderer.hpp  SpiralScene.cpp  SpiralScene.hpp  main.cpp
src/apps/spiral/shaders/: shader.comp  shader.vert
src/common/: window.cpp  window.h
src/common/core/: ComputePipeline.cpp  ComputePipeline.hpp  Device.cpp  Device.hpp  Instance.cpp  Instance.hpp  Pipeline.cpp  Pipeline.hpp  SpiralComputePipeline.cpp  SpiralComputePipeline.hpp  SpiralPipeline.cpp  SpiralPipeline.hpp  Swapchain.cpp  Swapchain.hpp  VulkanApp.cpp  VulkanApp.hpp
src/common/rendering/: CommandManager.cpp  CommandManager.hpp  Descriptors.cpp  Descriptors.hpp  FrameBuffer.cpp  FrameBuffer.hpp  RenderPass.cpp  RenderPass.hpp  Renderer.cpp  Renderer.hpp  SpiralRenderer.cpp  SpiralRenderer.hpp  UniformBuffer.cpp  UniformBuffer.hpp
src/common/resources/: Buffer.cpp  Buffer.hpp  DualModel.cpp  DualModel.hpp  Model.cpp  Model.hpp  Textures.cpp  Textures.hpp  VmaUsage.cpp
src/common/scene/: Camera.cpp  Camera.hpp  SpiralScene.cpp  SpiralScene.hpp  Transform.cpp  Transform.hpp
src/common/shaders/: shader.frag.spv  shader.vert.spv
src/common/simplification/: Simplificator.cpp  Simplificator.hpp  simplificationUtil.cpp  simplificationUtil.hpp
src/common/simplification/algorithms/: FloatingCellClustering.cpp  FloatingCellClustering.hpp  Naive.cpp  Naive.hpp  QEM.cpp  QEM.hpp  VertexClustering.cpp  VertexClustering.hpp  VertexDecimation.cpp  VertexDecimation.hpp
src/common/simplification/utils/: ErrorMetrics.cpp  ErrorMetrics.hpp  Geometry.cpp  Geometry.hpp  LazyPriorityQueue.hpp  SurfApprox.cpp  SurfApprox.hpp  Topology.cpp  Topology.hpp
src/common/ui/: ui.cpp  ui.hpp
src/core/: Device.cpp  Device.hpp  Instance.cpp  Instance.hpp  Pipeline.cpp  Pipeline.hpp  Swapchain.cpp  Swapchain.hpp
src/rendering/: FrameBuffer.cpp  FrameBuffer.hpp  Renderer.cpp  Renderer.hpp  UniformBuffer.cpp  UniformBuffer.hpp
src/resources/: Buffer.cpp  DualModel.cpp  DualModel.hpp  Model.cpp  Model.hpp
src/scene/: Camera.cpp  Camera.hpp  Transform.hpp
src/shaders/: shader.frag  shader.frag.spv  shader.vert  shader.vert.spv
src/simplification/: Simplificator.cpp  Simplificator.hpp  simplificationUtil.cpp  simplificationUtil.hpp
src/ui/: ui.cpp  ui.hpp
